--- a/todo.html
+++ b/todo.html
@@ -71,6 +71,30 @@
 
     </selection>
     <main class="container">
+        <header>
+            <div>
+                IdeaIcon
+                OptionIcon
+            </div>
+            <div><span id="dateToday">quarta-feira, 27 de abril de 2022</span></div>
+        </header>
+
+        <section class="tasks">
+            <div class="allDone"></div>
+                <div class="task">
+
+                </div>
+                
+        </section>
+
+        <footer>
+            <form id="AddNewTask">
+                <label for="inputTxtNewTask">
+                    IconPlus
+                    <input type="text" id="inputTxtNewTask" placeholder="Adicionar nova tarefa">
+                </label>
+            </form>
+        </footer>
 
     </main>
     <selection class="details">
