--- a/todo.html
+++ b/todo.html
@@ -68,13 +68,15 @@
                     Tarefas</li>
             </ol>
         </div>
-
     </selection>
     <main class="container">
         <header>
             <div>
+            <h1>Meu Dia</h1>
+            <div>
                 IdeaIcon
                 OptionIcon
+            </div>
             </div>
             <div><span id="dateToday">quarta-feira, 27 de abril de 2022</span></div>
         </header>
@@ -82,15 +84,13 @@
         <section class="tasks">
             <div class="allDone"></div>
                 <div class="task">
-
                 </div>
-                
         </section>
 
         <footer>
             <form id="AddNewTask">
                 <label for="inputTxtNewTask">
-                    IconPlus
+                    IconPlus +
                     <input type="text" id="inputTxtNewTask" placeholder="Adicionar nova tarefa">
                 </label>
             </form>
@@ -100,5 +100,7 @@
     <selection class="details">
 
     </selection>
+
+    <script type="module" src="assets/js/todo.js"></script>
 </body>
 </html>
