--- a/todo.html
+++ b/todo.html
@@ -88,7 +88,7 @@
         </section>
 
         <footer>
-            <form id="AddNewTask">
+            <form id="addNewTask">
                 <label for="inputTxtNewTask">
                     IconPlus +
                     <input type="text" id="inputTxtNewTask" placeholder="Adicionar nova tarefa">
