--- a/todo.html
+++ b/todo.html
@@ -83,8 +83,21 @@
 
         <section class="tasks">
             <div class="allDone"></div>
-                <div class="task">
+            <div class="task" id="1">
+                <div> <input type="checkbox" id="check_1" /></div>
+                <div>
+                    <div><span class="title-task">App Arte Ensaio</span></div>
+                    <div>
+                        <ul>
+                            <li>Tarefas</li>
+                            <li class="list-disc"> 0 de 4</li>
+                            <li class="dueDate">Hoje</li>
+                            <li class="list-disc">Attached</li>
+                        </ul>
+                    </div>
+                    <div>Star</div>
                 </div>
+            </div>
         </section>
 
         <footer>
