--- a/form.html
+++ b/form.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-icons/bootstrap-icons.svg">
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
 </head>
+
 <body>
-    <div class="container">
-        <div class="row">
+    <div class="container ">
+        <div class="row d-flex justify-content-center align-items-center">
             <div class="col-6">
                 <form method="POST" action="/login" target="_blank">
 
@@ -21,7 +21,7 @@
                         <input type="checkbox" id="cinema" value="cinema" /> Cinema<br />
                         <input type="radio" id="opcao1" value="1" name="opcao" /> Sim
                         <input type="radio" id="opcao2" value="2" name="opcao" checked="checked" /> Não <br />
-                        <input type=" button" class="btn btn-primary" value="Botão" />
+                        <input type="button" class="btn btn-primary" value="Botão" />
                         <!-- <button></button> -->
                         <input type="color" class="form-control" />
                         <input type="date" class="form-control" />
@@ -30,6 +30,19 @@
                         <input type="email" class="form-control" placeholder="Digite o email" required
                             oninvalid="this.setCustomValidity('Vai Corinthians!')" />
                         <input type="number" min="0" max="100" step="5" class="form-control" />
+                        <select name="carro" class="form-control">
+                            <option value="1">Fiat</option>
+                            <option value="2">Ford</option>
+                            <option value="3" selected="selected">Chevrolet</option>
+                            <option value="4">VW</option>
+                        </select>
+
+
+                        <textarea name="message" id="message" oninput="autoHeight(this)" class="form-control"
+                            style="overflow:hidden" cols="20" placeholder="Mensagem"></textarea>
+
+                            
+
                     </div>
 
                     <div class="form-group mb-3">
@@ -45,6 +58,14 @@
         </div>
     </div>
     <script>
+
+        function autoHeight(element) {
+            element.style.height = "20px";
+            element.style.height = (element.scrollHeight) + "px";
+        }
+
+
+
         const opcao = document.querySelectorAll("input[type='radio']");
         const btnSend = document.querySelector("#btn-send");
 
@@ -53,11 +74,12 @@
                 if (Number(item.value) == 1) {
                     btnSend.removeAttribute("disabled");
                 } else {
-                    btnSend.setAttribute(disabled, "disabled");
+                    btnSend.setAttribute("disabled", "disabled");
                 }
-            })
+            });
         });
     </script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
