fix photo profile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <selection class="menu">
         <header class="menu__header__profile">
             <div>
-                <img src="/assets/imagens/1648831960995 1.png" alt="profile" class="header__img__profile"/>
+                <img src="/assets/imagens/007.png" alt="profile" class="header__img__profile"/>
                 <p>
                     <strong>Paulo Lucena</strong>
                     <span class="profile-email">PauloLucena@email.com</span>
